# standard

./: .babel_codelists  .babel_schema  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  CLA.md  CONTRIBUTING.md  DEPLOYMENT.md  Gemfile  LICENSE  Makefile  README.md  apply-extensions.py  babel_ocds_codelist.cfg  babel_ocds_notes.cfg  babel_ocds_schema.cfg  build_docs.sh  build_pots.sh  changelog.md  common-requirements.in  common-requirements.txt  deploy.sh  manage.py  mdl.rb  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_docs.py  tox.ini  update_example.py
.github/ISSUE_TEMPLATE/: worked-example.md
.github/workflows/: ci.yml  js.yml  lint.yml  shell.yml  spellcheck.yml
.tx/: config
docs/: 404.md  conf.py  index.md  privacy-notice.md
include/: common.mk  config.mk  header.html  prologue.mk
schema/: compiled-release-schema.json  dereferenced-release-schema.json  meta-schema.json  record-package-schema.json  record-schema.json  release-package-schema.json  release-schema.json  versioned-release-validation-schema.json
script/: diff  update
standard/: .babel  .babel_codelists  .babel_schema  merging.md  standard.md  vocabulary.md  worked_example.md
tests/: __init__.py  conftest.py  test_common.py  test_docs.py  test_schema_integrity.py
util/: add_translation_notes.py  fetch_currency_codelist.py  fetch_document_format_codelist.py  fetch_iso639-1_codelist.py  fetch_language_codelist.py  fetch_mediaType_codelist.py  helper.py  make_dereferenced_release_schema.py  make_metaschema.py  make_versioned_release_schema.py
(+1341 files in other folders)
